--- a/abstract.tex
+++ b/abstract.tex
@@ -11,21 +11,22 @@ language which is the base on to which the mapping takes place which can be carr
 library as an extension to the host language or developing a hybrid programming language that accommodates the 
 best of both worlds.  
 
-This research focuses on combining the two most important and wide spread declarative programming paradigms, 
+This thesis focuses on combining the two most important and wide spread declarative programming paradigms, 
 functional and logical programming. This will include playing with languages from each paradigm, 
 \progLang{Haskell} from the functional side and \progLang{Prolog} from the logical side. The proposed approach 
 aims at adding logic programming features which are native to \progLang{Prolog} onto \progLang{Haskell} by 
-developing an extension which replicates the target language and utilises the advanced features of the host for an 
+developing an extension which replicates the target language and utilizes the advanced features of the host for an 
 efficient implementation.      
 
 The thesis  aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and
-\progLang{Prolog} by embedding the latter into the former and analysing the result of doing so as they have
+\progLang{Prolog} by embedding the latter into the former and analyzing the result of doing so as they have
 conflicting characteristics.
 The finished product will be something like a \textit{haskellised} \progLang{Prolog} which has logical programming
 like capabilities.
 
-We explore embedding domain specific languages in \progLang{Haskell}\endnote{%
+\endnote{%
   This sentence wanders off.  Remove it?  Or complete it.
+\mehul{Removed}
 }
 
        
