addressed few more notes in background

--- a/background.tex
+++ b/background.tex
@@ -112,20 +112,22 @@ modified \progLang{Prolog}: for example, \progLang{Scheme} \cite{racklog}, \prog
 \cite{komorowski1982qlog,robinson1982loglisp,robinson1980loglisp}, \progLang{Java} \cite{wikiprolog, jlog}, 
 \progLang{JavaScript} \cite{jscriptlog}, and the list \cite{yieldprolog} goes on. 
 
-The selection of the target language is not uncommon; \progLang{}
+The selection of the target language is not uncommon;
 
-The selection of languages is not uncommon and this not only the case with \progLang{Haskell,\endnote{%
+%The selection of languages is not uncommon and this not only the case with \progLang{Haskell,
+\endnote{%
     I do not understand the sentence before the comma.
 }\textsuperscript{,}\endnote{%
     comma splice.
 }\elabel{comma-splice}
-  Prolog} seems 
-to be the all time favourite for \yyy{"}{``}let's implement \progLang{Prolog} in the language X for proving it's power and 
-expressibility\yyy{"}{''}. The \progLang{Prolog} language has been partially implemented \cite{swipembedd} in other 
-languages \yyy{like}{such as} \progLang{Scheme} \cite{racklog}, \progLang{Lisp}  
+  \progLang{Prolog} seems 
+to be the all time favourite for ``let's implement \progLang{Prolog} in the language X for proving it's power and 
+expressibility''. The \progLang{Prolog} language has been partially implemented \cite{swipembedd} in other 
+languages such as \progLang{Scheme} \cite{racklog}, \progLang{Lisp}  
 \cite{komorowski1982qlog,robinson1982loglisp,robinson1980loglisp}, \progLang{Java} \cite{wikiprolog, jlog}, 
-\progLang{JavaScript} \cite{jscriptlog} and the list \cite{yieldprolog} goes on \xxx{and on}.\endnote{%
+\progLang{JavaScript} \cite{jscriptlog} and the list \cite{yieldprolog} goes on.\endnote{%
   This \P{} seems to repeat the preceding \P{}.  Merge them.
+  \mehul{It is meant to be a replacement}
 }
 
 The technique of embedding is a shallow one.
