--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -235,7 +235,7 @@ To solve the issue of infinitely deep language expressions, we find the fixed po
 \begin{enumerate}
 \item Extracting variable and creating dictionaries.
 
-\item Converting to UTerms and back
+\item Converting to \markWord{UTerm}s and back
 \end{enumerate}
 
 \begin{singlespace}
