--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -65,6 +65,8 @@
 \let\yyy\replace
 
 \newcommand{\progLang}[1]{\textsc{#1}}
+\newcommand{\unknownLabel}[1]{\texttt{\large\color{dark-red}\slshape #1}}
+\newcommand{\markWord}[1]{\unknownLabel{#1}\eref{text-kind}}
 \newcommand{\chapterReference}[2]{\textcolor{blue}{\underline{\hyperref[#1]{#2}}}}
 
 \definecolor{dark-purple}{rgb}{0.40,0.05,0.40}\relax
