--- a/embedding.tex
+++ b/embedding.tex
@@ -291,7 +291,10 @@ A lot of the above can be skipped or taken from the base language if an embeddin
 }
 For an embedded domain specific language the functionality is translated and written as an add on.
 The result can be thought of as a library.
-But the difference between an ordinary library and an eDSl is the feature set provided and the degree of embedding
+But the difference between an ordinary library and an eDSl\endnote{%
+  Here ``eDSl'' should be ``eDSL''.
+}
+is the feature set provided and the degree of embedding
 \cite{website:eDSLhaskellwiki}.
 For example, reading a file and parsing its contents to perform certain operations to return \textit{string}
 results is a shallow form of embedding as the generation of code, results is not native nor are the functions
