--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -56,7 +56,10 @@ Any filename beginning with a metasyntactic variable denotes a scratch file. Thi
 
 \cite{webste:metasyntacticvariablesc2wiki}
 
-A word, used in conversation or text that is meant as a variable. There is a fairly standard set in the ComputerScience culture. People tend to create their own if they are not exposed to others, which can be confusing. Of course, if you haven't seen them before they can be quite confusing. They are, however, useful enough that this is not enough reason to give them up.
+A word, used in conversation or text that is meant as a variable. There is a fairly standard set in the ComputerScience\endnote{%
+  ``ComputerScience'' should be ``Computer Science''.
+}
+culture. People tend to create their own if they are not exposed to others, which can be confusing. Of course, if you haven't seen them before they can be quite confusing. They are, however, useful enough that this is not enough reason to give them up.
 Standard set: foo, bar, baz, foobar/quux, quuux, quuuux, ....
 
 example: \yyy{"}{``}Suppose I have a list, foo, with a node, bar, ...\yyy{"}{''}
