--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -115,8 +115,14 @@ Taking into consideration above, there is quite some room for improvement and ad
 
 Moving onto what this thesis shall explore, first thing's first a complete, fully functional library which comes
 close to a \progLang{Prolog} like\eref{language-like} language and has practical abilities to carry out real-world tasks.
-They include predicates like\eref{such-as-like} \textit{cut, assert, fail, setOf, bagOf} among others.
-This form{\Huge s}\endnote{%
+They include predicates like\eref{such-as-like} \unknownLabel{cut}\endnote{%
+  Write macros like {\ttfamily\string\progLang} for the various classes
+  of special symbols in your thesis, and then apply them to words like
+  ``fail'', which when used as a \progLang{Prolog} word, should be
+  typeset as \texttt{\char`\\prologCode\char`\{fail\char`\}}, or some such.
+}\elabel{text-kind}
+, \markWord{assert}, \markWord{fail}, \markWord{setOf}, \markWord{bagOf} among others.
+This \yyy{would form}{forms}\endnote{%
   Not ``would form''.  ``forms'' perhaps.  You are talking about what \textbf{is} in the thesis.
 }
 the first stage of the implementation.
