--- a/proto1.tex
+++ b/proto1.tex
@@ -241,9 +241,8 @@ In this prototype we explore the unification aspect only.\endnote{%
 \end{figure}
 
 \section{What we do in this Prototype}\label{sec:proto1-what-we-do}
-This prototype throws light on the process of tackling the issues involved in creating
-a data type to replicate the target language type system while conforming to the host language restrictions and also utilizing the
-benefits.
+This prototype throws light on the process of tackling the issues involved in creating a data type to replicate the
+target language type system while conforming to the host language restrictions and also utilizing the benefits.
 
 
 We have a \progLang{Prolog} like\eref{language-like} language in \progLang{Haskell} defined via \textit{data}.
@@ -264,14 +263,16 @@ monadically.
 
 \section{Creating a data type}
 
-To start we need to define a abstract syntax for the \progLang{Prolog} like\eref{language-like} language. But there is a conflict between the type systems as
-we shall discuss.
+To start we need to define a abstract syntax for the \progLang{Prolog} like\eref{language-like} language.
+But there is a conflict between the type systems as we shall discuss.
 
 
-A type system consists of a set of rules to define a \yyy{"}{``}type\yyy{"}{''} to different constructs in a programming language such as variables, functions
-and so on. A static type system requires types to be attached to the programming constructs before hand which results in finding errors at
-compile time and thus increase the reliability of the program. The other end is the dynamic type system which passes through code which
-would not have worked in former environment, it comes of as less rigid.
+A type system consists of a set of rules to define a \yyy{"}{``}type\yyy{"}{''} to different constructs in a
+programming language such as variables, functions and so on.
+A static type system requires types to be attached to the programming constructs before hand which results in
+finding errors at compile time and thus increase the reliability of the program.
+The other end is the dynamic type system which passes through code which would not have worked in former
+environment, it comes of as less rigid.
 
 
 
@@ -295,10 +296,10 @@ For dynamic typing
 \item Re-usability
 \end{enumerate}
 
-Since \progLang{Haskell} is statically type we would need to define a \yyy{"}{``}typed\yyy{"}{''} language which should have a
-number of constructs representing different terms in \progLang{Prolog} such as complex structures (for example
-predicates, clauses etc.), don't cares, cuts, variables and so on.\endnote{%
-  Drop the ``would''s here.  We \textit{do} need to define a \progLang{Prolog} type.
+Since \progLang{Haskell} is statically type we would need to define a \yyy{"}{``}typed\yyy{"}{''} language which
+should have a number of constructs representing different terms in \progLang{Prolog} such as complex structures
+(for example predicates, clauses etc.), don't cares, cuts, variables and so on.\endnote{% 
+  Drop the ``would''s here.
 }
 
 Consider the language {in \yyy{Figure}{Listing}~\ref{tab:closed-terms}}\yyy{}{\Large,} which has been adopted from
@@ -379,7 +380,8 @@ One result of \yyy{the approach}{coding as in Listing~\ref{tab:non-recurse} rath
 \texttt{FlatTerm} is modular and generic as the structure
 "FlatTerm"\endnote{%
   You have `\textit{FlatTerm}' and `"FlatTerm"'.  Why not \texttt{FlatTerm} or better yet
-  \texttt{\csname @backslashchar\endcsname code\{FlatTerm\}}, where \texttt{\csname @backslashchar\endcsname code} is a macro you define.
+  \texttt{@`\\code\char`\{FlatTerm\char`\}},
+  where \texttt{\char`\\code} is a macro you define.
 }
 is separate
 from its
@@ -430,10 +432,10 @@ because with our original grammar all the expression that could be defined would
 The approach to tackling this problem is to find the ``fixed-point''.
 After infinitely many iterations we should get to a fixed point where further iterations make no
 difference.
-It means that applying one more FlatTerm would not change anything \yyy{–}{--}\eref{non-ascii}\textsuperscript{,}\endnote{%
+It means that applying one more \markWord{FlatTerm} would not change anything \yyy{–}{--}\eref{non-ascii}\textsuperscript{,}\endnote{%
   Even if entered correctly, an en-dash is not appropriate here.
 }
-a fix point does not move under FlatTerm.
+a fix point does not move under \markWord{FlatTerm}.
 
 \progLang{Haskell} provides it in two forms,\endnote{%
   \david{Why do you need to discuss value fixed points (\textit{i.e.,} \texttt{\bfseries fix})?  Do you need them?} 
@@ -468,7 +470,7 @@ The resulting language is of the form,
 data Prolog = P (Fix FlatTerm) deriving (Show,Eq,Ord)
 \end{minted}
 %
-simply speaking all the expressions resulting from \textit{FlatTerm} can be represented  by the type signature \textit{Fix FlatTerm}.
+simply speaking all the expressions resulting from \markWord{FlatTerm} can be represented  by the type signature \markWord{Fix FlatTerm}.
 
 A sample function working with such expressions would be of the form,
 \mint{haskell}|func :: Fix FlatTerm -> Fix FlatTerm|
@@ -603,8 +605,8 @@ our cause since the result of a query must be a list of substitutions which are 
 variable with language values(language constructs).
 
 Enter\xxx{,} \Verb[formatcom=\bf]!Traversable!\yyy{,}{\,.}%}{
-\yyy{it}{It} allows reduce whilst preserving the shape of the structure. Lastly, the Applicative instance is an intermediate
-between a functor and a monad.
+\yyy{it}{It} allows reduce whilst preserving the shape of the structure.
+Lastly, the Applicative instance is an intermediate between a functor and a monad.
 
 We create the necessary instances\endnote{%
   I am deeply suspicious of the instance for \texttt{Applicative} given.
@@ -647,7 +649,7 @@ This is shown in Figure~\ref{tab:zipMatch}.
          else Nothing
   \end{minted}
   \vspace*{-0.5\baselineskip}
-  \caption{FlatTerm instance of zipMatch}
+  \caption{\protect\markWord{FlatTerm} instance of \protect\markWord{zipMatch}}
   \label{tab:zipMatch}
 \end{code-list}
 
@@ -660,33 +662,39 @@ implementations exist,\endnote{%
 }
 
 \begin{enumerate}
-\item The IntVar implementation uses Int as the names of variables, and uses an
-IntMap to keep track of the environment.
+\item The \markWord{IntVar} implementation uses \markWord{Int} as the names of variables, and uses an
+  \markWord{IntMap} to keep track of the environment. 
 
-\item The STVar implementation uses STRefs, so we can use actual mutation for binding logic variables,
-rather than keeping an explicit environment around.
+\item The \markWord{STVar} implementation uses \markWord{STRef}s, so we can use actual mutation for binding logic
+  variables, rather than keeping an explicit environment around.
 
 \end{enumerate}
 
 \begin{comment}
-The library ships with two implementations of logic variables. The IntVar implementation uses Int as the names of variables, and uses an
-IntMap to keep track of the environment. The STVar implementation uses STRefs, so we can use actual mutation for binding logic variables,
-rather than keeping an explicit environment around. This implementation uses STVars.
+  The library ships with two implementations of logic variables.
+  The IntVar implementation uses Int as the names of variables, and uses an IntMap to keep track of the
+  environment.
+  The STVar implementation uses STRefs, so we can use actual mutation for binding logic variables, rather than
+  keeping an explicit environment around.
+  This implementation uses STVars.
 
-Performing unification has the side effect of binding logic variables to terms. Thus, we'll want to use a monad in order to keep track of
-these effects. The BindingMonad type class provides the definition of what we need from our ambient monad. In particular, we need to be
-able to generate fresh logic variables, to bind logic variables, and to lookup what our logic variables are bound to. The library provides
-the necessary instances for both IntVar and STVar.
+  Performing unification has the side effect of binding logic variables to terms.
+  Thus, we'll want to use a monad in order to keep track of these effects.
+  The BindingMonad type class provides the definition of what we need from our ambient monad.
+  In particular, we need to be able to generate fresh logic variables, to bind logic variables, and to lookup what
+  our logic variables are bound to.
+  The library provides the necessary instances for both IntVar and STVar.
 
-You can provide your own implementations of Variable and BindingMonad.
+  You can provide your own implementations of Variable and BindingMonad.
 \end{comment}
 
 \textbf{Some stuff about Meta syntactic variables can be put in here}
 
-This implementation uses STVars but a custom implementation can be used inside the BindingMonad.
-For our language expressions to be unifiable we must deal with the variables in the expressions being compared. For that we extract the
-variables and then convert them into a dictionary consisting of a free
-variable for each language variable as shown in Figure~\ref{tab:varsToDictM}.
+This implementation uses \markWord{STVars}
+but a custom implementation can be used inside the \markWord{BindingMonad}.
+For our language expressions to be unifiable we must deal with the variables in the expressions being compared.
+For that we extract the variables and then convert them into a dictionary consisting of a free variable for each
+language variable as shown in Figure~\ref{tab:varsToDictM}.
 
 \begin{code-list}
   \begin{minted}[linenos,gobble=2]{haskell}
@@ -719,7 +727,7 @@ variable for each language variable as shown in Figure~\ref{tab:varsToDictM}.
   \caption{Creating a variable dictionary}
   \label{tab:varsToDictM}
 \end{code-list}
-A language to STVar dictionary is only one part of the unification procedure, the terms themselves should be made
+A language to \markWord{STVar} dictionary is only one part of the unification procedure, the terms themselves should be made
 compatible for the in built unify procedure to perform look ups for the variables in them.
 The dictionary along with the fixed point version flattened of the term, as shown in Figure~\ref{tab:to-UTerm}.
 %
@@ -783,7 +791,8 @@ and for later use to convert them back, as shown in Figure~\ref{tab:from-UTerm}.
 \end{code-list}
 
 \clearpage
-The variable dictionaries and UTermified language expressions are unified in the binding monad as shown in Figure~\ref{tab:unification} and Figure~\ref{tab:unif-driver}.
+The variable dictionaries and \markWord{UTerm}ified language expressions are unified in the binding monad as shown
+in Figure~\ref{tab:unification} and Figure~\ref{tab:unif-driver}.
 %
 \begin{code-list}
 \begin{minted}[linenos]{haskell}
