removed endnote 3 (fixed, ligatures).

--- a/introduction.tex
+++ b/introduction.tex
@@ -32,12 +32,7 @@ The methodologies that have stood out are the functional and logical approaches.
   \mehul{none at the moment but I will change certain capitals to small}
 }
 The former is based on functions and lambda calculus, while the latter is based on Horn clause logic.
-Each of them has its own advantages and flaws\endnote{%
-  The first character of flaws was \\u\(+\)fb02 (an FL-ligature), which makes me think
-  that this text was cut and pasted.
-  \mehul{I do not understand}
-}
-.
+Each of them has its own advantages and flaws.
 How does one choose which approach to adopt?
 Perhaps one does not need to choose!
 This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a purely
