removed footnote 4 of a1b2c. (say more, now corrected.)

--- a/introduction.tex
+++ b/introduction.tex
@@ -37,22 +37,13 @@ How does one choose which approach to adopt?
 Perhaps one does not need to choose!
 This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a purely
 functional programming language and \progLang{Prolog}, a logical programming language so that one is not forced to
-%<<<<<<< 92e9eab348fb38506776f3025d3176b4e48557a9
-choose.
-The task at hand involves replicating \progLang{Prolog}-like\eref{language-like} features in \progLang{Haskell} such as unification and
-a single typed system.
-The thesis aims at leveraging the features of the host language in order to incorporate logic programming features
-resulting in extending \progLang{Haskell} with capabilities like unification.
-%=======
-choose. The task at hand involves replicating \progLang{Prolog} like features in \progLang{Haskell} such as unification and a single
-typed system.\endnote{%
-  Say more here?
-  This seems like a natural place to have more high-level comments on where the thesis is going.
-} The thesis aims at leveraging the features of the host language in order to incorporate logic programming features resulting in extending 
+choose. The task at hand involves replicating \progLang{Prolog} like
+features in \progLang{Haskell} such as unification and a single typed system.
+The thesis aims at leveraging the features of the host language in order to incorporate logic programming features resulting in extending 
 \progLang{Haskell} with capabilities like unification. We achieve this by adopting various aspects from approaches related to merging 
 paradigms and embedding techniques for programming languages. This results in a hybrid approach which provides a library taking advantage 
 of the host language features.
-% >>>>>>> added some content to introduction in reference to adressing notes
+
 
 
 
