cleaned white space.

--- a/introduction.tex
+++ b/introduction.tex
@@ -39,10 +39,11 @@ This document looks at the attempts, improvements and future possibilities of un
 functional programming language and \progLang{Prolog}, a logical programming language so that one is not forced to
 choose. The task at hand involves replicating \progLang{Prolog} like
 features in \progLang{Haskell} such as unification and a single typed system.
-The thesis aims at leveraging the features of the host language in order to incorporate logic programming features resulting in extending 
-\progLang{Haskell} with capabilities like unification. We achieve this by adopting various aspects from approaches related to merging 
-paradigms and embedding techniques for programming languages. This results in a hybrid approach which provides a library taking advantage 
-of the host language features.
+The thesis aims at leveraging the features of the host language in order to incorporate logic programming features
+resulting in extending \progLang{Haskell} with capabilities like unification.
+We achieve this by adopting various aspects from approaches related to merging paradigms and embedding techniques
+for programming languages.
+This results in a hybrid approach which provides a library taking advantage of the host language features.
 
 
 
