removed footnote 5 of a1b2c. (rewrite as two sentences, now corrected.)

--- a/introduction.tex
+++ b/introduction.tex
@@ -72,9 +72,7 @@ There are costs and incompatibilities to look at.
 A language might be simple to use and provide better performance than its predecessor but not always be worth the
 switch.
 Another approach would be to replicate target features exhibited by a language in the present one to avoid the
-hassle of jumping between the two. Commonly this results in an embedded language or a foreign function interface.\endnote{%
-  Rewrite as two sentences.
-}
+hassle of jumping between the two. Commonly this results in an embedded language or a foreign function interface.
 %<<<<<<< 92e9eab348fb38506776f3025d3176b4e48557a9
 A mixture of these ideologies results in a multi-paradigm / merged programming language.
 We try to encapsulated both the approaches of embedding and merging to develop a hybrid approach.
