--- a/introduction.tex
+++ b/introduction.tex
@@ -75,17 +75,8 @@ A language might be simple to use and provide better performance than its predec
 switch.
 Another approach would be to replicate target features exhibited by a language in the present one to avoid the
 hassle of jumping between the two. Commonly this results in an embedded language or a foreign function interface.
-%<<<<<<< 92e9eab348fb38506776f3025d3176b4e48557a9
 A mixture of these ideologies results in a multi-paradigm / merged programming language.
-We try to encapsulated both the approaches of embedding and merging to develop a hybrid approach.\endnote{%
-  Removed a \P{} that followed, as the one that currently follows seems to say the same thing.
-  That \P{} was
-  \begin{quote}
-    \slshape
-    The adoption of \progLang{Prolog} has been difficult since procedural languages were making
-    a mark when it was released. 
-  \end{quote}
-}
+We try to encapsulated both the approaches of embedding and merging to develop a hybrid approach.
 
 %An embedded language provides a lot of shortcuts
 
