--- a/introduction.tex
+++ b/introduction.tex
@@ -62,17 +62,19 @@ capabilities.
 %----------------------------------------------------------------------------
 
 Over the years the development of programming languages has become more and more rapid.
-Today the number of is in the thousands and counting \cite{website:timelineproglangwiki, website:historyofproglang}.
-The successors attempt to introduce new concepts and features to simplify the process of coding a solution and assist
-the programmer by lessening the burden of carrying out standard tasks and procedures.
-A new one tries to capture the best of the old; learn from the mistakes, add new concepts and move on; which seems to be
-good enough from an evolutionary perspective.
+Today the number of is in the thousands and counting \cite{website:timelineproglangwiki,
+  website:historyofproglang}.
+The successors attempt to introduce new concepts and features to simplify the process of coding a solution and
+assist the programmer by lessening the burden of carrying out standard tasks and procedures.
+A new one tries to capture the best of the old; learn from the mistakes, add new concepts and move on; which seems
+to be good enough from an evolutionary perspective.
 But all is not that straight forward when shifting from one language to another.
 There are costs and incompatibilities to look at.
 A language might be simple to use and provide better performance than its predecessor but not always be worth the
 switch.
 Another approach would be to replicate target features exhibited by a language in the present one to avoid the
-hassle of jumping between the two. Commonly this results in an embedded language or a foreign function interface.
+hassle of jumping between the two.
+Commonly this results in an embedded language or a foreign function interface.
 A mixture of these ideologies results in a multi-paradigm / merged programming language.
 We try to encapsulated both the approaches of embedding and merging to develop a hybrid approach.
 
