--- a/introduction.tex
+++ b/introduction.tex
@@ -77,7 +77,15 @@ Another approach would be to replicate target features exhibited by a language i
 hassle of jumping between the two.
 Commonly this results in an embedded language or a foreign function interface.
 A mixture of these ideologies results in a multi-paradigm / merged programming language.
-We try to encapsulated both the approaches of embedding and merging to develop a hybrid approach.
+We try to encapsulated both the approaches of embedding and merging to develop a hybrid approach.\endnote{%
+  Removed a \P{} that followed, as the one that currently follows seems to say the same thing.
+  That \P{} was
+  \begin{quote}
+    \slshape
+    The adoption of \progLang{Prolog} has been difficult since procedural languages were making
+    a mark when it was released. 
+  \end{quote}
+}
 
 %An embedded language provides a lot of shortcuts
 
