removed a duplicated paragraph.

--- a/introduction.tex
+++ b/introduction.tex
@@ -76,7 +76,15 @@ Another approach would be to replicate target features exhibited by a language i
 hassle of jumping between the two.
 Commonly this results in an embedded language or a foreign function interface.
 A mixture of these ideologies results in a multi-paradigm / merged programming language.
-We try to encapsulated both the approaches of embedding and merging to develop a hybrid approach.
+We try to encapsulated both the approaches of embedding and merging to develop a hybrid approach.\endnote{%
+  Removed a \P{} that followed, as the one that currently follows seems to say the same thing.
+  That \P{} was
+  \begin{quote}
+    \slshape
+    The adoption of \progLang{Prolog} has been difficult since procedural languages were making
+    a mark when it was released. 
+  \end{quote}
+}
 
 %An embedded language provides a lot of shortcuts
 
@@ -92,8 +100,6 @@ is usually \textit{practical} \progLang{Prolog} and the area being academia. It 
 logic,website:prolog1000db}. But there are a lot of good things about \progLang{Prolog} that should not die away. Moreover, \progLang{Prolog} is ideal
 for search problems.
 \end{comment}
-
-The adoption of \progLang{Prolog} has been difficult since procedural languages were making a mark when it was released.
 
 \progLang{Prolog} is a language that has a hard time being adopted.
 Born in an era where procedural languages were receiving a lot of attention, it suffered from competing against another
