changed the footnote about DSLs (#6 the day before this commit).

--- a/introduction.tex
+++ b/introduction.tex
@@ -122,11 +122,12 @@ Here the choice is \progLang{Haskell}; as both the languages are declarative the
 help to blend the two.
 
 Putting all of the above together, Domain Specific Languages\endnote{%
-  \david{I have the feeling that you should introduce the concept of DSLs
-  slightly higher.}
-  \mehul{higher ???}
-  \david{Earlier.}
-  \mehul{Moved up a few paragraphs}
+  \david{This footnote changed 2016-01-08.
+    The point I want to make here is that you are talking about Domain Specific Languages as if you expect the
+    reader to know what they are.  Should she?
+    You have discussed general purpose languages somewhat, but you haven't said what you mean by ``Domain Specific
+    Language'', nor have you given an example.
+  }%
 }
 are pretty good in doing what they are designed to do, but nothing else, resulting in choosing a different language
 every time.
