--- a/introduction.tex
+++ b/introduction.tex
@@ -138,11 +138,7 @@ Generally speaking, programming languages with a wide scope over problem domains
 accomplishing  mundane tasks.
 Approaching towards the solution can be complicated and tiresome, but the programming language in question acts as the
 master key.
-A general purpose language, as the name suggests,\endnote{%
-  Where I have put a {\ttfamily\expandafter\string\csname Large\endcsname} before a comma
-  in a correction, it is just to make the comma more visible.
-  Remove it when you do the correction.
-}
+A general purpose language, as the name suggests,
 provides a general set of tools to cover many
 problem domains.
 The downside is that such environments\endnote{%
