--- a/introduction.tex
+++ b/introduction.tex
@@ -145,9 +145,7 @@ The downside is that such environments\endnote{%
   Do you mean languages?  If not, what environments are you talking about?
   \mehul{the programming environment that the embedded language provides as a library}
 }
-lack the complete feature set which can make problem solving difficult.\endnote{%
-  ``approaching towards the solution'' does not flow well.  Reword.
-}
+lack the complete feature set which can make problem solving difficult.
 
 Flipping the coin to the other side, we see, the more specific the language is to the problem domain, the easier it
 is to solve the problem since the solution need not be moulded according to the capability  of the
