--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -231,7 +231,7 @@ The functional language \progLang{Scheme} is a very popular choice for this sort
 With a book \cite{friedman05reasoned} and an implementation to accompany
 \cite{website:kanren,website:minkanren}\endnote{%
   This preceding phrase is not a sentence.
-}\elabel{not-a-sentence}, 
+}\elabel{not-a-sentence}\yyy{}{\Large,} 
 which seems to have translated into \progLang{Haskell}, 
 \cite{website:haskellkanren,website:molog,website:minikanrent}. 
 
