--- a/introduction.tex
+++ b/introduction.tex
@@ -164,10 +164,7 @@ sometimes logical and sometimes both.
 Depending upon the problem, the language shapes itself accordingly and exhibits the desired characteristics.
 The ideal situation is a language with a rich feature set and the ability to mould itself according to the problem.
 A language with the ability to take the appropriate skill set and provide them to the programmer will reduce
-the hassle of jumping between languages or forcibly trying to solve a problem according within the limitations of a paradigm.\endnote{%
-  This preceding phrase is not a sentence.
-  \mehul{Changed}
-}\elabel{not-a-sentence}
+the hassle of jumping between languages or forcibly trying to solve a problem according within the limitations of a paradigm.
 
 The subject in question here is \progLang{Haskell} and the split personality being \progLang{Prolog}. How far can \progLang{Haskell} be 
 pushed to
