--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -229,7 +229,9 @@ The functional language \progLang{Scheme} is a very popular choice for this sort
   What sort of thing?
 }
 With a book \cite{friedman05reasoned} and an implementation to accompany
-\cite{website:kanren,website:minkanren}\eref{not-a-sentence}\yyy{}{\Large,} 
+\cite{website:kanren,website:minkanren}\endnote{%
+  This preceding phrase is not a sentence.
+}\elabel{not-a-sentence}\yyy{}{\Large,} 
 which seems to have translated into \progLang{Haskell}, 
 \cite{website:haskellkanren,website:molog,website:minikanrent}. 
 
