Endnote 12 renumbered and removed from introduction.tex .

--- a/proto1.tex
+++ b/proto1.tex
@@ -153,7 +153,13 @@ We begin with the programming constructs of the language.
 Two terms can be unified if they are the same or the variables can be assigned to terms such that the resulting
 terms are equal.
 
-The possibilities are,\eref{comma-before-list}
+The possibilities are,\endnote{%
+  I believe that I have commented on the preceding elsewhere.
+  The punctuation to introduce a list (that is, the end of the phrase immediately preceding the list) should not be
+  ``,'', but more likely a colon, or possibly a period.
+  There should also be punctuation after each item in a list.
+  See item~\ref{item:5} in the to-do list.
+}\elabel{comma-before-list}
 \begin{enumerate}
 \item If \mSV{term1} and \mSV{term2} are constants, then \mSV{term1} and \mSV{term2} unify if and only if they
   are the same atom, or the same number.
