--- a/introduction.tex
+++ b/introduction.tex
@@ -177,13 +177,7 @@ both the declarative paradigms.
 
 %The issue being discussed here is that often when a problem is to solved using a given language, it has to be moulded %according to the capability the
 %language can provide.
-This can be achieved in two ways:\endnote{%
-  I believe that I have commented on the preceding elsewhere.
-  The punctuation to introduce a list (that is, the end of the phrase immediately preceding the list) should not be
-  ``,'', but more likely a colon, or possibly a period.
-  There should also be punctuation after each item in a list.
-  See item~\ref{item:5} in the to-do list.
-}\elabel{comma-before-list}
+This can be achieved in two ways:
 \begin{description}
 \item [Embedding (\chapterReference{chap:embedding}{Chapter 4}):]
 
