--- a/introduction.tex
+++ b/introduction.tex
@@ -216,10 +216,7 @@ This can be achieved in two ways:
 \section{Thesis Organization}
 
 The next chapter, \chapterReference{chap:proposedWork}{Chapter 2} provides details about the shortcomings of the
-previous works and an approach for improvements.\endnote{%
-  ``Shortcomings'' is one word.
-  ``the road to a better future'' is poetic, but too vague.
-}
+previous works and an approach for improvements.
 \chapterReference{chap:background}{Chapter 3}, the background talks about the programming paradigms and languages
 in general and the ones in question.
 Then we look at the question from different angles namely, \chapterReference{chap:embedding}{Chapter 4},  Embedding
