removed #14, #15 (p. 6) Left a correction.

--- a/background.tex
+++ b/background.tex
@@ -18,14 +18,10 @@ Programming languages fall into different categories also known as ``paradigms''
 They exhibit different characteristics according to the paradigm they fall into.
 It has been argued \cite{Krishnamurthi:2008:TPL:1480828.1480846} that
 rather than classifying a language into a particular paradigm
-\textcolor{fuchsia}{Tt}\endnote{%
-  Fix.
-}
+\yyy{Tt}{\Huge ,}
 it is
 more accurate that a language exhibits a set of characteristics from a
-number of paradigms.\endnote{%
-  This sentence still needs more crafting.
-}
+number of paradigms.
 The broader the scope of a language, the broader is the versatility in solving problems.
 
 Programming Languages that fall into the same family, in our case declarative programming languages, can be of
