more discussion in the endnotes of Hindley-Milnor type unification.

--- a/background.tex
+++ b/background.tex
@@ -68,7 +68,13 @@ variables, lastly unifying all of the constraints giving the type of the result.
   \mehul{To explain the working, not directly required I guess but since \progLang{Haskell} is statically
     typed}\newline
   \david{Perhaps it is also relevant that this requires unification.}
-  \mehul{unificaiton is explained in proto1 and hints have been dropped at other places. Do you want me to write a short snipped here?}	
+  \mehul{unificaiton is explained in proto1 and hints have been dropped
+    at other places. Do you want me to write a short snipped
+    here?}\newline
+  \david{``snipped'' or ``snippet''?  You can just add a sentence like
+    ``\textsl{This is, in fact, an instance of the unification algorithm
+      that we discuss in a different context in Chapter~\ref{proto1}}.''.
+  }
 }
 
 Logic Programming, \cite{spivey1995introduction} on the other hand is based on formal logic.
